# cant-save-princess

./: .gitignore  Makefile  PLAN.md  README.md  agent_start.md  gen_asset_image.py  mypy.ini  notes.txt  pyi_entry.py  pyproject.toml  pyrightconfig.json  sanity_plan.txt
_old/: fluid.py  menu.py  spidr.py
game_design/: forest_area.txt  general.txt
src/: entities.py  main.py  world.py
src/csp/: __init__.py  actions.py  ai.py  assets.py  combat.py  commerce.py  common.py  dialogue.py  draw.py  economy.py  entities.py  flags.py  gameplay.py  graphics.py  interact.py  items.py  main.py  map_helpers.py  map_runtime.py  maps.py  messages.py  movement.py  shops.py  sprites.py  state.py  step.py  tiles.py  world.py
tools/: gen_asset_image.py
